kubernetes/basic-API/3-identity-servcie.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-service-deployment
  namespace: amit
  labels:
    app: identity-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-service
  template:
    metadata:
      labels:
        app: identity-service
    spec:
      containers:
        - name: identity-service
          image: justamitsaha/ms-identity-service:basic
          ports:
            - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: identity-service # other pods in the cluster will identify this one with this field
  namespace: amit
spec:
  selector:
    app: identity-service
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
