kubernetes/basic-API/4-product-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service-deployment
  namespace: amit
  labels:
    app: product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: justamitsaha/ms-product-service:basic
          ports:
            - containerPort: 8091
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: amit
spec:
  selector:
    app: product-service
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8091
      targetPort: 8091
