kubernetes/basic-API/5-gateway-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service-deployment
  namespace: amit
  labels:
    app: gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-service
          image: justamitsaha/ms-gateway-service:basic
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /actuator/health  # Health endpoint
              port: 8080              # Correct port
            failureThreshold: 30      # Allow up to 30 failures (5 minutes with 10s period)
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health  # Or any health endpoint your app exposes
              port: 8080              # Correct port
            initialDelaySeconds: 40
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health  # Health endpoint
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service # other pods in the cluster will identify this one with this field
  namespace: amit
spec:
  selector:
    app: gateway-service
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  # type: LoadBalancer
  # ports:
  #   - protocol: TCP
  #     port: 8080
  #     targetPort: 8080
