kubernetes/basic-API/6-app-ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: amit
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: amit.com
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: gateway-service
                port:
                  number: 8080
    - host: me.amit.com
      http:
        paths:
          - path: /config(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: configserver
                port:
                  number: 8071
